--- a/style/style1.css
+++ b/style/style1.css
@@ -11,4 +11,52 @@ div{
     opacity: 1;
     transform: translateY(0);
   }
+  *,
+*:after,
+*:before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+:active,
+:hover,
+:focus {
+  outline: 0 !important;
+  outline-offset: 0;
+}
+a,
+a:hover {
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+}
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+html {
+  scroll-behavior: smooth;
+}
+.navigation-wrap{
+  position: fixed;
+  width: 100%;
+  left: 0;
+  z-index: 1000;
+
+}
+.navigation-wrap .nav-item{
+  padding: 0 0.900rem;
+  transition: all 200ms linear;
+}
+.navbar-toggler:focus{
+  outline: unset;
+  border: unset;
+  box-shadow: none;
+}
+.nav-item h5{
+  font-family: Helvetica;
+}
   
