--- a/style/FAQ.css
+++ b/style/FAQ.css
@@ -84,7 +84,7 @@ h2 {
   height: 100%;
 }
 .hero {
-  background: url("img/bro4.jpg") no-repeat center center/cover;
+  background: url("../assets/images/bro4.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
