--- a/style/style.css
+++ b/style/style.css
@@ -53,31 +53,31 @@ h2 {
   color: black;
   line-height: 3rem;
 }
-.navigation-wrap{
+.navigation-wrap {
   position: fixed;
   width: 100%;
   left: 0;
   z-index: 1000;
-
 }
-.navigation-wrap .nav-item{
-  padding: 0 0.900rem;
+.navigation-wrap .nav-item {
+  padding: 0 0.9rem;
   transition: all 200ms linear;
 }
-.navbar-toggler:focus{
+.navbar-toggler:focus {
   outline: unset;
   border: unset;
   box-shadow: none;
 }
-.nav-item h5{
+.nav-item h5 {
   font-family: Helvetica;
 }
 .hero {
-    background: url("/assets/images/solo\ travel.webp") no-repeat center center/cover;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-  }
+  background: url("/assets/images/solo\ travel.webp") no-repeat center
+    center/cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+}
