--- a/style/tree.css
+++ b/style/tree.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata);
+/* @import url(https://fonts.googleapis.com/css?family=Inconsolata);
 
 *,
 *:after,
@@ -39,6 +39,9 @@ body {
 }
 ::-webkit-scrollbar-track {
   background: white;
+} */
+div {
+  overflow: hidden;
 }
 h1 {
   font-size: 3rem;
