--- a/style/style1.css
+++ b/style/style1.css
@@ -1,17 +1,14 @@
-div{
-  overflow: hidden;
-}
 .text-3 h1 {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: all 0.5s ease-out;
-  }
-  
-  .text-3 h1.animated {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  *,
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s ease-out;
+}
+
+.text-3 h1.animated {
+  opacity: 1;
+  transform: translateY(0);
+}
+/* *,
 *:after,
 *:before {
   -webkit-box-sizing: border-box;
@@ -39,24 +36,22 @@ ol {
 }
 html {
   scroll-behavior: smooth;
-}
-.navigation-wrap{
+} */
+.navigation-wrap {
   position: fixed;
   width: 100%;
   left: 0;
   z-index: 1000;
-
 }
-.navigation-wrap .nav-item{
-  padding: 0 0.900rem;
+.navigation-wrap .nav-item {
+  padding: 0 0.9rem;
   transition: all 200ms linear;
 }
-.navbar-toggler:focus{
+.navbar-toggler:focus {
   outline: unset;
   border: unset;
   box-shadow: none;
 }
-.nav-item h5{
+.nav-item h5 {
   font-family: Helvetica;
 }
-  
