--- a/style/tree.css
+++ b/style/tree.css
@@ -87,8 +87,7 @@ h2 {
   height: 100%;
 }
 .hero {
-  background: url("/Restore-Forests/assets/images/home.jpg") no-repeat center
-    center/cover;
+  background: url("../assets/images/home.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
