--- a/style/style.css
+++ b/style/style.css
@@ -1,47 +1,3 @@
-/* @import url(https://fonts.googleapis.com/css?family=Inconsolata);
-div {
-  overflow: hidden;
-}
-*,
-*:after,
-*:before {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-:active,
-:hover,
-:focus {
-  outline: 0 !important;
-  outline-offset: 0;
-}
-a,
-a:hover {
-  text-decoration: none;
-}
-a:hover {
-  color: red;
-}
-ul,
-ol {
-  margin: 0;
-  padding: 0;
-}
-html {
-  scroll-behavior: smooth;
-}
-body {
-  font-family: var(--primay-font);
-  font-size: 100%;
-  font-weight: 400;
-}
-::-webkit-scrollbar {
-  width: 0.625rem;
-}
-::-webkit-scrollbar-track {
-  background: white;
-} */
 div {
   overflow: hidden;
 }
@@ -87,18 +43,18 @@ h2 {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 .navbar {
-  opacity: 0;
+  /* opacity: 0; */
   transform: translateY(-20px);
   transition: all 0.5s ease-out;
 }
 
 .navbar.show {
-  opacity: 1;
+  /* opacity: 1; */
   transform: translateY(0);
 }
 
 .hero {
-  opacity: 0;
+  /* opacity: 0; */
   transform: translateY(20px);
   transition: all 1s ease-out;
 }
@@ -110,7 +66,7 @@ h2 {
 
 /* Initial state for cards */
 .card {
-  opacity: 0;
+  /* opacity: 0; */
   transform: translateY(20px);
   transition: all 0.6s ease-out;
 }
@@ -133,4 +89,88 @@ h2 {
   .hero h1 {
     font-size: 3rem; /* Medium screens */
   }
+}
+/* Modal Initial State (hidden) */
+.modal {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.modal.show {
+  display: block;
+  opacity: 1;
+}
+
+.modal.hide {
+  display: none;
+  opacity: 0;
+}
+
+/* Add a simple fade-in effect */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.scroll-to-top-btn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 15px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.scroll-to-top-btn:hover {
+  background-color: #218838;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+input.shake {
+  animation: shake 0.3s ease-in-out;
+}
+/* Initial hidden state for cards */
+.animate-on-scroll {
+  opacity: 0;
+  transform: translateY(50px); /* Cards will start below */
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+/* Visible state (when the card has scrolled into view) */
+.animate-on-scroll.visible {
+  opacity: 1;
+  transform: translateY(0); /* Cards will move to their original position */
+}
+
+/* Hover effect for cards */
+.animate-on-scroll:hover {
+  transform: scale(1.05); /* Slight zoom effect */
+  transition: transform 0.3s ease-in-out;
 }
