Add all new code

--- a/style/style.css
+++ b/style/style.css
@@ -174,3 +174,13 @@ input.shake {
   transform: scale(1.05); /* Slight zoom effect */
   transition: transform 0.3s ease-in-out;
 }
+.card {
+  transform: translateY(50px);
+  opacity: 0;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+}
+
+.card.animate-card {
+  transform: translateY(0);
+  opacity: 1;
+}
